# MultipleRobotLocalizationMapping-SLAM

./: README.md
Matlab/: main.m
ROSpackages/multiple_robot_slam/: CMakeLists.txt  package.xml
ROSpackages/multiple_robot_slam/launch/: main.launch  robot_description.launch
ROSpackages/multiple_robot_slam/models/Building1/: model.sdf
ROSpackages/multiple_robot_slam/models/Robot1/: model.sdf
ROSpackages/multiple_robot_slam/script/: linear_laser.h
ROSpackages/multiple_robot_slam/urdf/: robot1.gazebo  robot1.urdf  robot1.xacro
ROSpackages/multiple_robot_slam/world/: Building1.world
ROSpackages/multiple_robot_slam/worlds/: Building1.world
